--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
   </head>
   <body>
-        <div id="name">
-            <p>Name: <input type="text" id="myText" name="user" value=""></p>
-            <p>Name: <input type="number" id="radius" name="user" value=""></p>
-        </div>
+    <div id="name">
+    <div class="button"><button class="button-find">Search</button></div>	
+    
+      <p>Enter category (caffe, shop, bank, etc): <input type="text" id="myText" name="user" value=""></p>
+      <p class="warnval"></p>
+      <p>Enter distance of research in meters: <input type="number" id="radius" name="user" value="0"></p>
+      <p class="warnrad"></p>
+      <div id="result"></div>
+  </div>
+	
+        
 
-		<button class="button-find">Try it</button>
-        <p id="demo"></p>  
         <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC17j5Pt-ViVaBvSqfO1hDp3RxYGZ_Dtrc&libraries=places&callback=initMap" async defer></script>
-	<script src="index.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC17j5Pt-ViVaBvSqfO1hDp3RxYGZ_Dtrc&libraries=places&callback=initMap" async defer></script>
+    <!--<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>-->
+   <script src="index.js"></script>
 </body>
   </html>
